# maze-dataset

./: .gitignore  MazeTokenizer2_hashes.zanj  README.md  _generate_percolated_deadend_start_mazes.ipynb  _tests.ipynb  generate_dataset.sh  makefile  maze_data_gen.md  pyproject.toml  setup.py  test.ipynb
.github/workflows/: all-tok-checks.yml  build-paper.yml  checks.yml  make-docs.yml  speed-benchmark.yml
.meta/requirements/: requirements-all.txt  requirements-base.txt  requirements-dev.txt  requirements-groups.txt  requirements-lint.txt  requirements-user.txt  requirements.txt
_archive/: plot_maze.py
custom_maze_data/: generate_custom_mazes.py
docs/: index.html  make_docs.py  maze_dataset.html  search.js
docs/benchmarks/: benchmark_analysis.ipynb  benchmark_generation.py  benchmark_medium.jsonl  benchmark_temp.jsonl  index.html  percolation_benchmarks.py  speed.html  success.html
docs/benchmarks/data/: benchmark_data.jsonl  benchmark_large.jsonl  benchmark_small.jsonl
docs/benchmarks/percolation_fractions/: result-n16-c18-p11.zanj  result-n16-c18-p16.zanj  result-n32-c18-p16.zanj  result-n64-c18-p16.zanj
docs/combined/: maze-dataset.md  maze_dataset.html  maze_dataset.md  maze_dataset.txt  maze_dataset_gfm.md
docs/coverage/: coverage.txt
docs/coverage/html/: class_index.html  function_index.html  index.html  status.json  z_0051794d125b4bfe___init___py.html  z_0051794d125b4bfe_all_tokenizers_py.html  z_0051794d125b4bfe_maze_tokenizer_py.html  z_0051794d125b4bfe_save_hashes_py.html  z_10d4c7453a7a5aef___init___py.html  z_10d4c7453a7a5aef_plot_dataset_py.html  z_10d4c7453a7a5aef_plot_maze_py.html  z_10d4c7453a7a5aef_plot_tokens_py.html  z_10d4c7453a7a5aef_print_tokens_py.html  z_12898e2b1ed8aadd_test_collect_gen_metadata_py.html  z_12898e2b1ed8aadd_test_get_forking_path_points_py.html  z_17a673dfc32a45fd_test_bool_array_from_string_py.html  z_17a673dfc32a45fd_test_coord_str_tuple_py.html  z_17a673dfc32a45fd_test_corner_first_ndindex_py.html  z_17a673dfc32a45fd_test_custom_endpoints_py.html  z_17a673dfc32a45fd_test_generators_py.html  z_17a673dfc32a45fd_test_latticemaze_py.html  z_17a673dfc32a45fd_test_maze_dataset_py.html  z_17a673dfc32a45fd_test_neighbors_py.html  z_17a673dfc32a45fd_test_solved_maze_py.html  z_17bcd94be7932087_test_bool_array_from_string_py.html  z_17bcd94be7932087_test_coord_str_tuple_py.html  z_17bcd94be7932087_test_corner_first_ndindex_py.html  z_17bcd94be7932087_test_custom_endpoints_py.html  z_17bcd94be7932087_test_custom_generator_py.html  z_17bcd94be7932087_test_generators_py.html  z_17bcd94be7932087_test_latticemaze_py.html  z_17bcd94be7932087_test_maze_dataset_py.html  (+104 more)
docs/examples/: generate_datasets.py  generate_examples.py  generate_plots.py  maze_examples.html  maze_examples.html.jinja2
docs/maze_dataset/: benchmark.html  constants.html  dataset.html  generation.html  maze.html  plotting.html  testing_utils.html  token_utils.html  tokenization.html  utils.html
docs/notebooks/: demo_dataset.html  demo_generator.html  demo_latticemaze.html  demo_mazetokenizermodular.html  demo_readme.html  demo_tokenization.html  estimate_dataset_fractions.html  forking_points.html  index.html  iterated_backfilling.html  output_formats.html  profile_dataset_save_read.html
docs/other/: lmcat.txt  todo-inline-standard.md  todo-inline-table.md  todo-inline.html  todo-inline.jsonl
docs/paper/: paper-arxiv.md  paper.html  paper.md  paper.tex  preamble.tex  refs.bib
docs/resources/: better_icons.ipynb  bootstrap-reboot.min.css  content.css  custom.css  make_docs.py
maze_dataset/: __init__.py  constants.py  math.py  testing_utils.py  token_utils.py  util.py  utils.py
maze_dataset/benchmark/: __init__.py  config_sweep.py  percolation_fractions.py  speed.py  sweep_fit.py
maze_dataset/dataset/: __init__.py  collected_dataset.py  configs.py  dataset.py  filters.py  maze_dataset.py  maze_dataset_config.py  plot_dataset.py  rasterized.py  single_token_tasks.py  success_predict_math.py  tokenizer.py
maze_dataset/generation/: __init__.py  default_generators.py  generators.py  lattice_maze.py  registration.py  seed.py  utils.py
maze_dataset/maze/: __init__.py  lattice_maze.py  solved_maze.py
maze_dataset/plotting/: __init__.py  plot_dataset.py  plot_maze.py  plot_svg_fancy.py  plot_tokens.py  print_tokens.py
maze_dataset/tokenization/: MazeTokenizer2_hashes.npy  MazeTokenizer2_hashes.zanj  MazeTokenizerModular_hashes.npy  __init__.py  all_tokenizers.py  common.py  hash_storage.py  maze_tokenizer.py  maze_tokenizer_legacy.py  save_hashes.py  token_utils.py  tokenizer.py  util.py
maze_dataset/utils/: notebook_utils.py  utils.py
notebooks/: benchmark_analysis.ipynb  demo_dataset.ipynb  demo_dataset_old.ipynb  demo_generator.ipynb  demo_latticemaze.ipynb  demo_mazetokenizermodular.ipynb  demo_new_tokenizers.ipynb  demo_readme.ipynb  demo_tokenization.ipynb  demo_tokenization_legacy.ipynb  estimate_dataset_fractions.ipynb  forking_points.ipynb  iterated_backfilling.ipynb  maze_figure_generator.ipynb  output_formats.ipynb  profile_dataset_save_read.ipynb  serialize_minimal_dev.ipynb  test-g10-n1000-a_dfs-h63648.zanj  test-g10-n1000-a_dfs-h63648_min.zanj  test-g3-n2-a_dfs-h36217_min.zanj  test-g3-n2-a_dfs-h69471.zanj  test-g3-n2-a_dfs-h69471_min.zanj  test-g3-n2-a_dfs-h72835.zanj  test-g3-n2-a_dfs-h72835_min.zanj  test-g3-n2-a_dfs-h99822.zanj  test-g3-n2-a_dfs-h99822_min.zanj  test-g5-n10-a_dfs-h23872.zanj  test-g5-n10-a_dfs-h23872_min.zanj  test-g5-n10-a_dfs-h30430_min.zanj  test-g5-n10-a_dfs-h61540.zanj  test-g5-n10-a_dfs-h61540_min.zanj  test-g5-n10-a_dfs-h91208_min.zanj  test-g5-n100-a_dfs-h43027_min.zanj  test-g5-n100-a_dfs-h43699.zanj  test-g5-n100-a_dfs-h43699_min.zanj  test-g5-n1000-a_dfs-h29685.zanj  test-g5-n1000-a_dfs-h29685_min.zanj  test-g5-n10K-a_dfs-h30530.zanj  test-g5-n10K-a_dfs-h30530_min.zanj
tests/all_tokenizers/: test_all_tokenizers.py
tests/data/: collected-test_collection-n7-h93287.zanj
tests/profiling/: profiling_g10_n10k_alt.txt  serialization_profiling.py
tests/unit/: example_validation.py
(+260 files in other folders)
